# hepconduit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
hepconduit/: __init__.py  audit.py  cli.py  contract_packs.py  contracts.py  convert.py  diff.py  doctor.py  filtering.py  fingerprint.py  models.py  pdg.py  plugins.py  provenance.py  schema.py  validation.py
hepconduit/io/: __init__.py  csv_tsv.py  hepmc3.py  lhe.py  parquet.py  reader_base.py  registry.py  writer_base.py
tests/: conftest.py  test_audit_diff_contracts.py  test_hepconvert.py  test_hepmc3_edge_cases.py  test_lhe_edge_cases.py  test_parquet_full.py  test_roundtrip.py
